Comment code, tweak bootstrap layout.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <body bgcolor="white">
 <div class="container">
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-md-3">
             <form id="addForm">
                 <div class="form-group">
                     <label for="keyInput">Key</label>
@@ -21,8 +21,7 @@
                 <button class="btn btn-default" id="addButton">Add</button>
             </form>
         </div>
-        <div class="col-xs-12"><hr/></div>
-        <div class="col-xs-12">
+        <div class="col-md-8 col-md-offset-1">
             <table class="table table-hover" id="mainTable">
                 <thead>
                     <tr>
